--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lahe veebileht</title>
 </head>
 <body>
 <h1>Minu tudengikood: 232826IAIB</h1>
